--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 *.exe
 *.out
 *.app
+main
 
 ### Linux ###
 *~
@@ -51,7 +52,7 @@
 .nfs*
 
 ### VisualStudioCode ###
-.vscode
+.vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
